# simia_tui_light

./: .gitignore  README.md  ascii_art.py  lablog.py  lablog_config.json  pyproject.toml  requirements.txt  tui.py  tui.tcss
export/: 2026-03-11_to_2026-03-31_Bowser.html
src/simia_log/: __init__.py  __main__.py  lablog.py  paths.py  tui.py  tui.tcss
